剩下两个api修改
